--- a/code.html
+++ b/code.html
@@ -248,7 +248,7 @@
             </div>
 
             <div class="footer">
-                <p>Made with ❤️ | Refresh the page to start over</p>
+                <p>Refresh the page to start over</p>
             </div>
         </div>
     </div>
