--- a/code.html
+++ b/code.html
@@ -204,7 +204,7 @@
     <div class="container">
         <div class="card">
             <div class="header">
-                <h1>A Special Message For You</h1>
+                <h1>A Special Message For </h1>
                 <p>Click the buttons below to reveal heartfelt messages</p>
             </div>
 
